<resources>
    <string name="app_name">IntroApp</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string-array name="my_list">
        <item>Indpro</item>
        <item>ABC</item>
        <item>DEF</item>
        <item>GHI</item>
        <item>JKL</item>
        <item>MNO</item>
        <item>PQR</item>
        <item>STU</item>
        <item>VWX</item>
        <item>YZA</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="welcome">Welcome</string>
    <string name="notification_title">This is my Notification</string>
    <string name="notification_text">You are looking at my notification.</string>
    <string name="button">Button</string>
    <string name="firstName">First Name*</string>
    <string name="lastName">Last Name*</string>
    <string name="mail">E-mail id*</string>
    <string name="mob">Mobile Number(+91)*</string>
    <string name="gender">Gender*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City*</string>
    <string name="register">Register</string>
    <string name="middleName">Middle Name</string>
    <string name="dob">Date Of Birth*</string>
    <string name="setDate">Set Date</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
        <item>TAB 4</item>
    </string-array>
    <string-array name="cityArray">
        <item>Mumbai</item>
        <item>Chennai</item>
        <item>Delhi</item>
        <item>Kolkata</item>
        <item>Hyderabad</item>
        <item>Bangalore</item>
        <item>Pune</item>
        <item>Ahmedabad</item>
    </string-array>
</resources>
